Update AzureDevOps-CI.yaml for Azure Pipelines

--- a/AzureDevOps-CI.yaml
+++ b/AzureDevOps-CI.yaml
@@ -1,5 +1,5 @@
-pool:
-  name: Hosted VS2017
+pool:  
+  vmImage: 'macOS-10.15'
   demands:
   - MSBuild
   - Xamarin.Android
@@ -74,15 +74,15 @@ steps:
 
 
 # TODO: FIX THIS
-# - task: AndroidSigning@2
-#   displayName: 'Signing and aligning APK'
-#   inputs:
-#     apkFiles: '$(Parameters.appFiles)'
-#     jarsignerKeystoreFile: '295e9c4e-9fd4-4376-853d-7e1c31cd6f66'
-#     jarsignerKeystorePassword: '$(Keystore.Password)'
-#     jarsignerKeystoreAlias: '$(Keystore.Alias)'
-#     jarsignerKeyPassword: '$(Keystore.Password)'
-#     zipalign: false
+- task: AndroidSigning@2
+  displayName: 'Signing and aligning APK'
+  #inputs:
+    # apkFiles: '$(Parameters.appFiles)'
+    # jarsignerKeystoreFile: '295e9c4e-9fd4-4376-853d-7e1c31cd6f66'
+    # jarsignerKeystorePassword: '$(Keystore.Password)'
+    # jarsignerKeystoreAlias: '$(Keystore.Alias)'
+    # jarsignerKeyPassword: '$(Keystore.Password)'
+    # zipalign: false
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
